2000-09-04  Jeffrey Stedfast  <fejj@helixcode.com>

	* mail-format.c (mail_generate_reply): Applied Jesse's patch that
	will append a signature to the replied message text

	* folder-browser-factory.c: Changed "Send & Receieve" back to "Get
	Mail" temporarily so that the toolbar buttons don't all get
	stretched to some weird proportion

2000-09-03  JP Rosevear  <jpr@helixcode.com>

	* mail-config.c (mail_config_add_news): Copy the passed in item
	before adding
	(mail_config_add_source): ditto
	(mail_config_add_identity): ditto

	* mail-config-gui.c (mail_config): We don't actually need a notebook
	pointer.
	(identities_edit_clicked): Don't explicitly destroy, we are using
	gtk_clist_set_data_full now
	(sources_edit_clicked): ditto
	(news_edit_clicked): ditto
	(mail_config): Use gtk_clist_set_row_data_full to kill leaks

2000-09-03  Jeffrey Stedfast  <fejj@helixcode.com>

	* folder-browser-factory.c: Change the "Get Mail" toolbar button
	to become "Send & Receieve"

	* mail-callbacks.c (send_queued_mail): New callback function for
	sending queued mail
	(send_receieve_mail): New callback for Send & Receieve that
	basically just calls send_queued_mail and then fetch_mail

	* mail-ops.c (cleanup_send_mail): Mod to be able to handle a NULL
	composer window
	(setup_send_mail): Modified to handle a NULL composer widget
	(mail_do_send_queue): New convenience async function to send all
	messages in a folder (aka all messages in a queue)

2000-09-02  Jeffrey Stedfast  <fejj@helixcode.com>

	* mail-tools.c (mail_tool_move_folder_contents): Since POP3
	doesn't implement get_message_info, we need to check for info to
	be NULL. In this case, we need to make our own info structure to
	pass to append_message and then remember to free it
	afterward. Should we even bother with get_message_info? And if so,
	should we then implement get_message_info for POP3?

2000-09-02  Ettore Perazzoli  <ettore@helixcode.com>

	* folder-browser.c (etable_key): Make the `Home' key to move to